--- a/syllabus/module/0.1-slides.md
+++ b/syllabus/module/0.1-slides.md
@@ -19,19 +19,26 @@ Let's dive into details: [https://discord.com/blog/why-discord-is-switching-from
 
 ### AWS Firecracker
 Firecracker is an open source virtualization technology that is purpose-built for creating and managing secure, multi-tenant container and function-based services.
-Firecracker enables you to deploy workloads in lightweight virtual machines, called microVMs, which provide enhanced security and workload isolation over traditional VMs, while enabling the speed and resource efficiency of containers. Firecracker was developed at Amazon Web Services to improve the customer experience of services like AWS Lambda and AWS Fargate .
-
-Firecracker is a virtual machine monitor (VMM) that uses the Linux Kernel-based Virtual Machine (KVM) to create and manage microVMs. Firecracker has a minimalist design. It excludes unnecessary devices and guest functionality to reduce the memory footprint and attack surface area of each microVM. This improves security, decreases the startup time, and increases hardware utilization. Firecracker is generally available on 64-bit Intel, AMD and Arm CPUs with support for hardware virtualization.
+Firecracker enables you to deploy workloads in lightweight virtual machines, called microVMs, which provide enhanced security and workload isolation over traditional VMs, while enabling the speed and resource efficiency of containers. Firecracker was developed at Amazon Web Services to improve the customer experience of services like AWS Lambda and AWS Fargate.
 
 Firecracker is used by/integrated with (in alphabetical order): appfleet, containerd via firecracker-containerd, Fly.io, Kata Containers, Koyeb, Northflank, OpenNebula, Qovery, UniK, Weave FireKube (via Weave Ignite), webapp.io, and microvm.nix. Firecracker can run Linux and OSv guests. Our latest roadmap can be found here.
+
+Let's dive into details: [https://firecracker-microvm.github.io/](https://firecracker-microvm.github.io/)
+
 
 ### Zed editor
 Zed is a high-performance, multiplayer code editor from the creators of Atom and Tree-sitter. It's also open source.
 
+Let's dive into details: [https://zed.dev/](https://zed.dev/)
+
+
 ### Reth (EVM based)
+Reth (short for Rust Ethereum, pronunciation) is a new Ethereum full node implementation that is focused on being user-friendly, highly modular, as well as being fast and efficient. Reth is an Execution Layer (EL) and is compatible with all Ethereum Consensus Layer (CL) implementations that support the Engine API. It is originally built and driven forward by Paradigm, and is licensed under the Apache and MIT licenses.
+
+Let's dive into details: [https://github.com/paradigmxyz/reth](https://github.com/paradigmxyz/reth)
 
 
 ## Punchline
-
+Rust is being adopted in a lot of production systems at the moment. With unique memory management model, high performance, along a strict compiler also acting as a code companion, Rust is a worthy language for you to try and learn.
 
 ---
